GNOME Bugzilla – Bug 771652
batch rename: segfault on undo after renaming attempt with empty filename
Last modified: 2016-09-20 16:22:51 UTC
Created attachment 335850 [details] Backtrace for crash Nautilus segfaults on batch rename with 'Find and replace text' under certain conditions. How to reproduce: 1. Create some files. touch 1 2 2. Select those files -> Rename 3. Select 'Find and Replace text'. Give '1' as existing text, and let the replacement text be empty. 4. Click Rename 5. Undo (ctrl+Z) Result: Nautilus now segfaults.
Created attachment 335875 [details] [review] batch-rename-dialog: disable rename button on empty name If the new name has no characters, then the Rename button will be disabled.
Review of attachment 335875 [details] [review]: Thanks for the patch! It looks good to me. However for the future we would like to display a message of what is wrong, like "names cannot be empty". So let's leave the bug report open and mark it for 3.24.
Commit myself because I needed to test the commits bot :) Attachment 335875 [details] pushed as f11e467 - batch-rename-dialog: disable rename button on empty name