batch-rename-dialog: disable rename button on empty name

If the new name has no characters, then the Rename button will be
disabled.

https://bugzilla.gnome.org/show_bug.cgi?id=771652